--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ body {
 	height: 35px;
 }
 
+
 .text-box {
 	position: absolute;
 	top: 40%;
@@ -59,9 +60,19 @@ body {
 	transform: translate(-50%, -50%); /* in relation to the element itself */
 }
 
+/** center with flexbox */
+/* .text-box {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+} */
+
 .heading-primary {
 	color: white;
 	text-transform: uppercase;
+	/*? fix for potential shaky animation at the end*/
+	backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -69,11 +80,48 @@ body {
 	font-size: 60px;
 	font-weight: 400;
 	letter-spacing: 35px;
+	animation: moveInLeft;
+	animation-duration: 1s;
+	animation-timing-function: ease-in-out;
+	/* 
+	animation-iteration-count: 3; 
+	animation-delay: 3s;
+	animation-fill-mode: forwards; 
+	*/
 }
 
-.heading-primary-sub {
+.heading-primary-sub { 
 	display: block;
 	font-size: 20px;
 	font-weight: 700;
 	letter-spacing: 17.4px;
+	animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft {
+	0% {
+		opacity: 0;
+		transform: translateX(-100px) ; /* left to right */
+	}
+	80% {
+		transform: translateX(10px);
+	}
+	100% {
+		opacity: 1;
+		transform: translate(0px); /* the way it looked before the animation */
+	}
+}
+
+@keyframes moveInRight {
+	0% {
+		opacity: 0;
+		transform: translateX(100px);
+	}
+	80% {
+		transform: translateX(-10px);
+	}
+	100% {
+		opacity: 1;
+		transform: translate(0px);
+	}
 }
