--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,32 @@ Dark green: #28b485
 
 */
 
-* {
-	/* we want to start clean, bcs browsers usually add some margins and padding */
+*,
+*::before,
+*::after {
+	/* start clean, bcs browsers usually add some margins and padding */
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box; /* The width and height properties includes content, padding and border */
+	box-sizing: inherit; /* better practice to put it in <body> */
+}
+
+html {
+	/* 62.5% of 16px (default browser font-size) 
+	  if we used pixels, user could't override our font-size */
+	font-size: 62.5%; /*! 10px */
 }
 
 body {
-	font-family: "Lato", sans-serif; /* every child element inherits it, instead from the universal selector, better practice */
+	font-family: "Lato", sans-serif; /* every child inherits it, instead from the universal selector, better practice */
 	font-weight: 400;
-	font-size: 16px;
 	line-height: 1.7;
 	color: #777;
-	padding: 30px;
+	padding: 3rem;
+	box-sizing: border-box; /* width and height properties include content, padding and border */
 }
 
 .header {
-	height: 95vh; /* 95% of viewport height */
+	height: 95vh; 
 	background-image: linear-gradient(
 			to right bottom,
 			rgba(126, 213, 111, 0.8),
@@ -32,24 +40,24 @@ body {
 		),
 		url(../img/hero.jpg);
 	background-size: cover;
-	background-position: top; /* image top stays but bottom gets cropped when resizing the screen*/
+	background-position: top; /* image top stays but bottom gets cropped when resizing */
 	position: relative;
 	clip-path: polygon(
 		0 0,
 		100% 0,
 		100% 75vh,
 		0 100%
-	); /* distance from left(x-axis) and top(y-axis) for corner of the shape*/
+	); /* distance from left(x-axis) and top(y-axis) for each corner of the shape */
 }
 
 .logo-box {
-	position: absolute; /* if header werent relative, it would start at top-left corner of the screen, not condsidering <body> padding */
-	top: 40px;
-	left: 40px;
+	position: absolute; /* if header wasnt relative, it would start at top-left corner of the screen, not condsidering <body> padding */
+	top: 4rem;
+	left: 4rem;
 }
 
 .logo {
-	height: 35px;
+	height: 3.5rem;
 }
 
 .text-box {
@@ -57,7 +65,7 @@ body {
 	top: 40%;
 	left: 50%; /* in relation to the parent element */
 	transform: translate(-50%, -50%); /* in relation to the element itself */
-	text-align: center; /* centers the text in the middle of itself (we did this for the button) */
+	text-align: center; /* centers the button */
 }
 
 /** center with flexbox */
@@ -73,14 +81,14 @@ body {
 	text-transform: uppercase;
 	/*? fix for potential shaky animation at the end*/
 	backface-visibility: hidden;
-	margin-bottom: 60px;
+	margin-bottom: 6rem;
 }
 
 .heading-primary-main {
 	display: block;
-	font-size: 60px;
+	font-size: 6rem;
 	font-weight: 400;
-	letter-spacing: 35px;
+	letter-spacing: 3.5rem;
 	animation: moveInLeft;
 	animation-duration: 1s;
 	animation-timing-function: ease-in-out;
@@ -93,70 +101,71 @@ body {
 
 .heading-primary-sub {
 	display: block;
-	font-size: 20px;
+	font-size: 2rem;
 	font-weight: 700;
-	letter-spacing: 17.4px;
+	letter-spacing: 1.75rem;
 	animation: moveInRight 1s ease-out;
 }
 
 @keyframes moveInLeft {
 	0% {
 		opacity: 0;
-		transform: translateX(-100px); /* left to right */
+		transform: translateX(-10rem); /* left to right */
 	}
 	80% {
-		transform: translateX(10px);
+		transform: translateX(1rem);
 	}
 	100% {
 		opacity: 1;
-		transform: translate(0px); /* the way it looked before the animation */
+		transform: translate(0); /* the way it looked before the animation */
 	}
 }
 
 @keyframes moveInRight {
 	0% {
 		opacity: 0;
-		transform: translateX(100px);
+		transform: translateX(10rem);
 	}
 	80% {
-		transform: translateX(-10px);
+		transform: translateX(-1rem);
 	}
 	100% {
 		opacity: 1;
-		transform: translate(0px);
+		transform: translate(0);
 	}
 }
 
 @keyframes moveInBottom {
 	0% {
 		opacity: 0;
-		transform: translateY(30px);
+		transform: translateY(3rem);
 	}
 	100% {
 		opacity: 1;
-		transform: translate(0px);
+		transform: translate(0);
 	}
 }
 
 .btn:link,
 .btn:visited {
+	font-size: 1.6rem;
 	text-transform: uppercase;
 	text-decoration: none;
-	padding: 15px 40px;
+	padding: 1.5rem 4rem;
 	display: inline-block; /* bcs we added padding/margin so it occupied the space of other elements */
-	border-radius: 100px; /* any high number */
+	border-radius: 10rem; /* any high number */
 	transition: all 0.2s; /* must be on the initial state */
 	position: relative; /* for the psuedoelement */
 }
 
 .btn:hover {
-	transform: translateY(-3px); /* goes up */
-	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+	transform: translateY(-0.3rem); /* goes up */
+	box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
 .btn:active {
-	transform: translateY(-1px); /* in relation to initial link state */
-	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+	transform: translateY(-0.1rem); /* in relation to initial link state */
+	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .btn-white {
@@ -171,12 +180,12 @@ body {
 	display: inline-block;
 	height: 100%;
 	width: 100%;
-	border-radius: 100px;
+	border-radius: 10rem;
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: -1; /* hidden behind the button */
-	transition: all .4s;
+	transition: all 0.4s;
 }
 
 .btn-white::after {
@@ -189,6 +198,6 @@ body {
 }
 
 .btn-animated {
-	animation: moveInBottom .5s ease-out .75s;
+	animation: moveInBottom 0.5s ease-out 0.75s;
 	animation-fill-mode: backwards; /* step 1 of animation applied before it even starts */
 }
