--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ Dark green: #28b485
 	/* start clean, bcs browsers usually add some margins and padding */
 	margin: 0;
 	padding: 0;
-	box-sizing: inherit; /* better practice to put it in <body> */
+	box-sizing: inherit; /* bcs its better practice to declare border-box it in <body> so every elemnt inherits it from body */
 }
 
 html {
@@ -32,7 +32,7 @@ body {
 }
 
 .header {
-	height: 95vh; 
+	height: 95vh;
 	background-image: linear-gradient(
 			to right bottom,
 			rgba(126, 213, 111, 0.8),
@@ -50,17 +50,17 @@ body {
 	); /* distance from left(x-axis) and top(y-axis) for each corner of the shape */
 }
 
-.logo-box {
+.header__logo-box {
 	position: absolute; /* if header wasnt relative, it would start at top-left corner of the screen, not condsidering <body> padding */
 	top: 4rem;
 	left: 4rem;
 }
 
-.logo {
+.header__logo {
 	height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
 	position: absolute;
 	top: 40%;
 	left: 50%; /* in relation to the parent element */
@@ -84,7 +84,7 @@ body {
 	margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
 	display: block;
 	font-size: 6rem;
 	font-weight: 400;
@@ -92,6 +92,7 @@ body {
 	animation: moveInLeft;
 	animation-duration: 1s;
 	animation-timing-function: ease-in-out;
+	/* 	animation-timing-function: cubic-bezier(0.15, 1.32, 0.3,-0.14); */
 	/* 
 	animation-iteration-count: 3; 
 	animation-delay: 3s;
@@ -99,7 +100,7 @@ body {
 	*/
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
 	display: block;
 	font-size: 2rem;
 	font-weight: 700;
@@ -168,7 +169,7 @@ body {
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
 	background-color: #fff;
 	color: #777;
 }
@@ -188,7 +189,7 @@ body {
 	transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
 	background-color: #fff;
 }
 
@@ -197,7 +198,7 @@ body {
 	opacity: 0; /* it animates it fading away completely */
 }
 
-.btn-animated {
+.btn--animated {
 	animation: moveInBottom 0.5s ease-out 0.75s;
 	animation-fill-mode: backwards; /* step 1 of animation applied before it even starts */
 }
