--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -37,3 +37,21 @@ body {
 		animation: moveInRight 1s ease-out;
 	}
 }
+
+.heading-secondary {
+	font-size: 3.5rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+	display: inline-block;
+	background-clip: text; // morao stavit da mi ne stavlja error na -webkitu, pojma nemam dal ista radi
+	-webkit-background-clip: text;
+	color: transparent;
+	letter-spacing: .2rem;
+	transition: all .2s;
+
+	&:hover {
+		transform: skew(15deg, 2deg) scale(1.1);
+		text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+	}
+}
