--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,6 +1,5 @@
 .row {
 	max-width: $grid-width; /* 1140px */
-	background: #eee;
 	margin: 0 auto;
 
 	&:not(:last-child) {
@@ -11,7 +10,6 @@
 
 	// [class|='col']
 	[class^="col-"] {
-		background: orangered;
 		float: left;
 
 		&:not(:last-child) {
@@ -25,32 +23,27 @@
 
 	.col-1-of-3 {
 		width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
-		background: orangered;
 	}
 
 	.col-2-of-3 {
 		width: calc(
 			2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
 		);
-		background: orangered;
 	}
 
 	.col-1-of-4 {
 		width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
-		background: orangered;
     }
     
     .col-2-of-4 {
 		width: calc(
 			2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
 		);
-		background: orangered;
     }
     
     .col-3-of-4 {
-		/* width: calc(
+		width: calc(
 			3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal}
-        ); */
-		background: orangered;
+        );
 	}
 }
