--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,7 +1,7 @@
 .btn {
 	&:link,
 	&:visited {
-		font-size: 1.6rem;
+		font-size: $default-font-size;
 		text-transform: uppercase;
 		text-decoration: none;
 		padding: 1.5rem 4rem;
@@ -52,5 +52,31 @@
 	&--animated {
 		animation: moveInBottom 0.5s ease-out 0.75s;
 		animation-fill-mode: backwards;
+	}
+}
+
+.btn-text {
+	&:link,
+	&:visited {
+		font-size: $default-font-size;
+		color: $color-primary;
+		display: inline-block;
+		text-decoration: none;
+		border-bottom: 1px solid $color-primary;
+		padding: 3px;
+		transition: all .3s;
+	}
+
+	&:hover {
+		background: $color-primary;
+		color: $color-white;
+		transform: translateY(-.2rem);
+		box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+		
+	}
+
+	&:active {
+		transform: translateY(-0.1rem);
+		box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
 	}
 }
