started building the tours-section :sparkles:
- Created basic card layout with front and back sides
- Animated the cards using transform and perspective properties
- Created variables for box-shadow and replaced the old values with the new variables

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -48,7 +48,7 @@ body {
 		$color-primary-dark
 	);
 	display: inline-block;
-	background-clip: text; // morao stavit da mi ne stavlja error na -webkitu, pojma nemam dal ista radi
+	background-clip: text;
 	-webkit-background-clip: text;
 	color: transparent;
 	letter-spacing: 0.2rem;
