--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -13,7 +13,7 @@
 
 	&:hover {
 		transform: translateY(-0.3rem);
-		box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+		box-shadow: $shadow-button-white-hover;
 
 		&::after {
 			transform: scaleX(1.4) scaleY(1.6);
@@ -23,7 +23,7 @@
 
 	&:active {
 		transform: translateY(-0.1rem);
-		box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+		box-shadow: $shadow-button-white-active;
 	}
 
 	&--white {
@@ -71,12 +71,12 @@
 		background: $color-primary;
 		color: $color-white;
 		transform: translateY(-.2rem);
-		box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+		box-shadow:$shadow-button-text-hover;
 		
 	}
 
 	&:active {
 		transform: translateY(-0.1rem);
-		box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
+		box-shadow:$shadow-button-text-active;
 	}
 }
