--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,36 @@ body {
     color: #000;
     transform: scale(0.95); }
 
+.card {
+  /* perspective has to be on the parent */
+  perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  .card__side {
+    color: white;
+    font-size: 3rem;
+    height: 50rem;
+    transition: all 0.8s ease;
+    position: absolute;
+    /* took them out of natural flow so the card(parent) collapsed - has no height - nothing we can do except to specify the same height for parent */
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    /* we wont see back side of front card */
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+  .card:hover .card__side--front {
+    transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0deg); }
+
 .feature-box {
   background: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
@@ -216,6 +246,7 @@ body {
     margin-bottom: 0.5rem;
     color: transparent;
     background: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
     background-clip: text; }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
@@ -286,7 +317,12 @@ body {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-8deg);
-  margin-top: -12rem;
+  margin-top: -16rem;
   /* select direct child - row */ }
   .section-features > * {
     transform: skewY(8deg); }
+
+.section-tours {
+  background: #f7f7f7;
+  padding: 30rem 0 60rem;
+  margin-top: -16rem; }
