--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -4,7 +4,7 @@
 	padding: 2.5rem;
 	text-align: center;
 	border-radius: 3px;
-	box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+	box-shadow:  $shadow-card;
     transition: transform 0.3s;
 
 	&__icon {
@@ -17,6 +17,7 @@
 			$color-primary-light,
 			$color-primary-dark
 		);
+		-webkit-background-clip: text;
 		background-clip: text;
 	}
 
