--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ body {
     color: white;
     font-size: 3rem;
     height: 50rem;
-    transition: all 0.8s ease;
+    transition: all .8s ease;
     position: absolute;
     /* took them out of natural flow so the card(parent) collapsed - has no height - nothing we can do except to specify the same height for parent */
     top: 0;
@@ -228,7 +228,7 @@ body {
       .card__side--back-1 {
         background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
   .card:hover .card__side--front {
-    transform: rotateY(180deg); }
+    transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0deg); }
 
