--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -10,7 +10,7 @@
 		font-size: 3rem;
 
 		height: 50rem;
-		transition: all 0.8s ease;
+		transition: all .8s ease;
 		position: absolute; /* took them out of natural flow so the card(parent) collapsed - has no height - nothing we can do except to specify the same height for parent */
 		top: 0;
 		left: 0;
@@ -33,7 +33,7 @@
 	}
 
 	&:hover &__side--front {
-		transform: rotateY(180deg);
+		transform: rotateY(-180deg);
 	}
 
 	&:hover &__side--back {
