--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,44 +1,115 @@
 .card {
+	// FUNCTIONALITY
 	/* perspective has to be on the parent */
+	-webkit-perspective: 150rem;
 	perspective: 150rem;
-    position: relative;
-    height: 50rem;
-    
+	position: relative;
+	height: 52rem;
 
 	&__side {
-		color: white;
-		font-size: 3rem;
-
-		height: 50rem;
-		transition: all .8s ease;
+		height: 52rem;
+		-webkit-transition: all 0.8s ease;
+		transition: all 0.8s ease;
 		position: absolute; /* took them out of natural flow so the card(parent) collapsed - has no height - nothing we can do except to specify the same height for parent */
 		top: 0;
 		left: 0;
 		width: 100%;
-        backface-visibility: hidden; /* we wont see back side of front card */
-        border-radius: 3px;
-        box-shadow: $shadow-card;
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden; /* we wont see back side of front card */
+		border-radius: 3px;
+		overflow: hidden; /* bcs the image was overlflowing the parent, didnt have top curved corners anymore */
+		box-shadow: $shadow-card;
 
 		&--front {
 			background: $color-white;
 		}
 
 		&--back {
-            transform: rotateY(180deg);
-            
-            &-1 {
-                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
-            }
+			-webkit-transform: rotateY(180deg);
+			transform: rotateY(180deg);
+
+			&-1 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-secondary-light,
+					$color-secondary-dark
+				);
+			}
 		}
 	}
 
 	&:hover &__side--front {
+		-webkit-transform: rotateY(-180deg);
 		transform: rotateY(-180deg);
 	}
 
 	&:hover &__side--back {
+		-webkit-transform: rotateY(0deg);
 		transform: rotateY(0deg);
 	}
-}
+	// .card:hover .card__side {
 
-// .card:hover .card__side {
+	// FRONT SIDE STYLING
+	&__picture {
+		background-size: cover;
+		height: 23rem;
+		background-blend-mode: screen;
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); /* x and y axis */
+
+		&--1 {
+			background-image: linear-gradient(
+					to right bottom,
+					$color-secondary-light,
+					$color-secondary-dark
+				),
+				url(../img/nat-5.jpg); /* only one level up, considering style.css */
+		}
+	}
+
+	&__heading {
+		font-size: 2.8rem;
+		font-weight: 300;
+		text-transform: uppercase;
+		text-align: right;
+		color: $color-white;
+		position: absolute;
+		top: 12rem;
+		right: 2rem;
+		width: 75%;
+	}
+
+	&__heading-span {
+		padding: 1rem 1.5rem;
+		-webkit-box-decoration-break: clone;
+		box-decoration-break: clone;
+
+		&--1 {
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-secondary-light, 0.85),
+				rgba($color-secondary-dark, 0.85)
+			);
+		}
+	}
+
+	&__details {
+		padding: 3rem;
+
+		ul {
+			list-style: none;
+			width: 80%;
+			margin: 0 auto;
+
+			li {
+				text-align: center;
+				font-size: 1.5rem;
+				padding: 1rem;
+
+				&:not(:last-child) {
+					border-bottom: 1px solid $color-grey-light-2;
+				}
+			}
+		}
+	}
+}
