--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -29,11 +29,13 @@
 			transform: rotateY(180deg);
 
 			&-1 {
-				background-image: linear-gradient(
-					to right bottom,
-					$color-secondary-light,
-					$color-secondary-dark
-				);
+				background-image: $linear-gradient-secondary;
+			}
+			&-2 {
+				background-image: $linear-gradient-primary;
+			}
+			&-3 {
+				background-image: $linear-gradient-tertiary;
 			}
 		}
 	}
@@ -50,6 +52,7 @@
 	// .card:hover .card__side {
 
 	// FRONT SIDE STYLING
+
 	&__picture {
 		background-size: cover;
 		height: 23rem;
@@ -58,12 +61,18 @@
 		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); /* x and y axis */
 
 		&--1 {
-			background-image: linear-gradient(
-					to right bottom,
-					$color-secondary-light,
-					$color-secondary-dark
-				),
+			background-image: $linear-gradient-secondary,
 				url(../img/nat-5.jpg); /* only one level up, considering style.css */
+		}
+
+		&--2 {
+			background-image: $linear-gradient-primary,
+				url(../img/nat-6.jpg); 
+		}
+
+		&--3 {
+			background-image: $linear-gradient-tertiary,
+				url(../img/nat-4.jpg); 
 		}
 	}
 
@@ -91,6 +100,23 @@
 				rgba($color-secondary-dark, 0.85)
 			);
 		}
+		
+		&--2 {
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-primary-light, 0.85),
+				rgba($color-primary-dark, 0.85)
+			);
+		}
+
+		&--3 {
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-tertiary-light, 0.85),
+				rgba($color-tertiary-dark, 0.85)
+			);
+		}
+
 	}
 
 	&__details {
@@ -111,5 +137,34 @@
 				}
 			}
 		}
+	}
+
+	// BACK SIDE STYLING
+
+	/* call to action */
+	&__cta {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 90%;
+		text-align: center;
+	}
+
+	&__price-box {
+		text-align: center;
+		color: $color-white;
+		margin-bottom: 8rem;
+
+	}
+
+	&__price-only {
+		font-size: 1.4rem;
+		text-transform: uppercase;
+	}
+
+	&__price-value {
+		font-size: 6rem;
+		font-weight: 100;
 	}
 }
