--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,52 @@ body {
     -webkit-transform: translateY(-1.5rem) scale(1.03);
     transform: translateY(-1.5rem) scale(1.03); }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg);
+  position: relative;
+  /*  & > * {
+	transform: skewX(12deg);
+    } */ }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg); }
+  .story__img {
+    height: 100%;
+    transform: translateX(-4rem) scale(1.35);
+    transition: all .5s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    filter: blur(0.3rem) brightness(0.8);
+    transform: translateX(-4rem) scale(1); }
+
 .row {
   max-width: 114rem;
   /* 1140px */
@@ -386,6 +432,7 @@ body {
   background-size: cover;
   background-position: top;
   /* image top stays but bottom gets cropped when resizing */
+  background-attachment: fixed;
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
@@ -403,14 +450,6 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
-/* center with flexbox 
-.text-box {
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-} 
-*/
 .section-about {
   background: #f7f7f7;
   padding: 25rem 0;
@@ -430,3 +469,7 @@ body {
   background: #f7f7f7;
   padding: 30rem 0 15rem;
   margin-top: -16rem; }
+
+.section-stories {
+  padding: 15rem 0;
+  background-color: #f7f7f7; }
