--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -16,7 +16,7 @@
 		width: 100%;
 		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden; /* we wont see back side of front card */
-		border-radius: 3px;
+		border-radius: $border-radius;
 		overflow: hidden; /* bcs the image was overlflowing the parent, didnt have top curved corners anymore */
 		box-shadow: $shadow-card;
 
@@ -61,18 +61,15 @@
 		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); /* x and y axis */
 
 		&--1 {
-			background-image: $linear-gradient-secondary,
-				url(../img/nat-5.jpg); /* only one level up, considering style.css */
+			background-image: $linear-gradient-secondary, url(../img/nat-5.jpg); /* only one level up, considering style.css */
 		}
 
 		&--2 {
-			background-image: $linear-gradient-primary,
-				url(../img/nat-6.jpg); 
+			background-image: $linear-gradient-primary, url(../img/nat-6.jpg);
 		}
 
 		&--3 {
-			background-image: $linear-gradient-tertiary,
-				url(../img/nat-4.jpg); 
+			background-image: $linear-gradient-tertiary, url(../img/nat-4.jpg);
 		}
 	}
 
@@ -100,7 +97,7 @@
 				rgba($color-secondary-dark, 0.85)
 			);
 		}
-		
+
 		&--2 {
 			background-image: linear-gradient(
 				to right bottom,
@@ -116,7 +113,6 @@
 				rgba($color-tertiary-dark, 0.85)
 			);
 		}
-
 	}
 
 	&__details {
@@ -155,7 +151,6 @@
 		text-align: center;
 		color: $color-white;
 		margin-bottom: 8rem;
-
 	}
 
 	&__price-only {
