--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,8 +2,8 @@
 	width: 75%;
 	margin: 0 auto;
 	box-shadow: 0 3rem 6rem rgba($color: $color-black, $alpha: 0.1);
-	background-color: rgba($color: $color-white, $alpha: .6);
-	border-radius: 3px;
+	background-color: rgba($color: $color-white, $alpha: 0.6);
+	border-radius: $border-radius;
 	padding: 6rem;
 	padding-left: 9rem;
 	font-size: $default-font-size;
@@ -26,8 +26,8 @@
 
 	&__img {
 		height: 100%;
-        transform: translateX(-4rem) scale(1.35);
-        transition: all .5s;
+		transform: translateX(-4rem) scale(1.35);
+		transition: all 0.5s;
 	}
 
 	&__text {
@@ -53,10 +53,10 @@
 	&:hover &__caption {
 		opacity: 1;
 		transform: translate(-50%, -50%);
-    }
-    
-    &:hover &__img {
-        filter: blur(.3rem) brightness(.8);
-        transform: translateX(-4rem) scale(1);
-    }
+	}
+
+	&:hover &__img {
+		filter: blur(0.3rem) brightness(0.8);
+		transform: translateX(-4rem) scale(1);
+	}
 }
