--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,9 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "components/button";
 @import "components/bg-video";
+@import "components/button";
+@import "components/form";
 @import "components/composition";
 @import "components/card";
 @import "components/feature-box";
