--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,13 @@
 		right: 6rem;
 		z-index: 2000;
 		box-shadow: 0 1rem 3rem rgba($color: $color-black, $alpha: 0.1);
+		// text-align: center;
+		// my flexbox method of centering
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-content: center;
+		cursor: pointer;
 	}
 
 	&__background {
@@ -89,8 +96,68 @@
 	&__checkbox:checked ~ &__background {
 		transform: scale(70);
 	}
+
 	&__checkbox:checked ~ &__nav {
 		opacity: 1;
 		width: 100%;
+	}
+
+	//ICON
+	&__icon {
+		position: relative;
+		align-self: center; /* my metohod */
+
+		&,
+		&::before,
+		&::after {
+			width: 3rem;
+			height: 3px;
+			background-color: $color-grey-dark-3;
+			display: inline-block;
+		}
+
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			left: 0;
+			transition: all .2s;
+		}
+
+		&::before {
+			top: -0.8rem;
+			//INTERESTING PROPERTY (wasn't needed here)
+			// transform-origin: left;
+		}
+
+		&::after {
+			top: 0.8rem;
+		}
+	}
+
+	&__button:hover &__icon::before {
+		// top: -1rem;
+		transform: translateY(-0.2rem);
+	}
+
+	&__button:hover &__icon::after {
+		// top: 1rem;
+		transform: translateY(0.2rem);
+	}
+
+	&__checkbox:checked + &__button &__icon {
+		background-color: transparent;
+
+		&::before {
+			top: 0;
+			// transform: rotate(45deg);
+			transform: rotate(calc(180deg - 45deg)); /* 135deg */
+		}
+
+		&::after {
+			top: 0;
+			// transform: rotate(-45deg);
+			transform: rotate(calc(-180deg + 45deg)); /* -135deg */
+		}
 	}
 }
