--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,8 +8,22 @@
 
 html {
 	// This defines what 1rem is
-	font-size: 62.5%; /* 10px */
+	font-size: 62.5%; // 1rem = 10px, 10/16 = 62.5%
 	scroll-behavior: smooth;
+
+	@include respond(big-desktop) { // width > 2200
+		font-size: 75%; // 1rem = 12px, 12/16 = 75%
+	}	
+
+	@include respond(tab-land) { // width < 1200
+		font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
+	}
+
+	@include respond(tab-port) { // width < 900
+		font-size: 50%; // 1rem = 8px, 8/16 = 50%
+		// it will also apply to phone
+	}
+	
 }
 
 body {
