--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -12,11 +12,12 @@ body {
 	/*? fix for potential shaky animation at the end*/
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
-	margin-bottom: 6rem;
+	margin-bottom: 7rem;
 
 	&--main {
 		display: block;
-		font-size: 6rem;
+		// font-size: 6rem;
+		font-size: 8rem;
 		font-weight: 400;
 		letter-spacing: 3.5rem;
 		-webkit-animation: moveInLeft;
@@ -35,7 +36,7 @@ body {
 
 	&--sub {
 		display: block;
-		font-size: 2rem;
+		font-size: 3rem;
 		font-weight: 700;
 		letter-spacing: 1.75rem;
 		-webkit-animation: moveInRight 1s ease-out;
