--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -72,7 +72,7 @@
 		top: -0.6rem;
 		left: 0;
 
-		// mx wax of centering the pseudoelement
+		// my way of centering the pseudoelement
 		display: flex;
 		align-items: center;
 		justify-content: center;
