--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ $breakpoint arguement choices:
 - tab-land
 - big-desktop
 
+ORDER: Base + typography > general layout + grid > page layout > components
+
 1em = 16px (aka browser default, we cant choose the size)
 doesn't work with rems
 */
@@ -52,7 +54,9 @@ doesn't work with rems
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scrollbar-color: #55c57a #f7f7f7; }
   @media (min-width: 137.5em) {
     html {
       font-size: 75%; } }
@@ -64,14 +68,17 @@ html {
       font-size: 50%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 .heading-primary {
   color: white;
@@ -79,47 +86,64 @@ body {
   /*? fix for potential shaky animation at the end*/
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  margin-bottom: 7rem; }
+  margin-bottom: 6.5rem; }
   .heading-primary--main {
     display: block;
-    font-size: 8rem;
+    font-size: 7rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
-    -webkit-animation: moveInLeft;
     animation: moveInLeft;
-    -webkit-animation-duration: 1s;
     animation-duration: 1s;
-    -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
+    /* 600px / 16px = 37.5em */
     /* 	animation-timing-function: cubic-bezier(0.15, 1.32, 0.3,-0.14); */
     /* 
 		animation-iteration-count: 3; 
 		animation-delay: 3s;
 		animation-fill-mode: forwards; 
 		*/ }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        font-size: 6rem;
+        letter-spacing: 1rem; } }
   .heading-primary--sub {
     display: block;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 700;
     letter-spacing: 1.75rem;
     -webkit-animation: moveInRight 1s ease-out;
-    animation: moveInRight 1s ease-out; }
+    animation: moveInRight 1s ease-out;
+    /* 600px / 16px = 37.5em */ }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        font-size: 2.3rem;
+        letter-spacing: 0.5rem; } }
 
 .heading-secondary {
+  display: inline-block;
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
+  letter-spacing: 0.2rem;
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
   background-image: linear-gradient(to right, #7ed56f, #28b485);
-  display: inline-block;
+  border-image: linear;
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  letter-spacing: 0.2rem;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3.2rem; } }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2.8rem; } }
   .heading-secondary:hover {
-    -webkit-transform: skew(15deg, 2deg) scale(1.1);
     transform: skew(15deg, 2deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
@@ -142,9 +166,15 @@ body {
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-top-big {
   margin-top: 8rem !important; }
@@ -247,7 +277,7 @@ body {
   font-family: inherit;
   font-size: 1.5rem;
   color: inherit;
-  padding: 1.5rem 2rem;
+  padding: 1rem 2rem;
   border-radius: 2px;
   background-color: rgba(255, 255, 255, 0.5);
   border: none;
@@ -317,6 +347,9 @@ body {
 .form__radio-input:checked ~ .form__radio-label .form__radio-button:after {
   opacity: 1; }
 
+.form .heading-secondary {
+  padding: 0; }
+
 .composition {
   position: relative; }
   .composition__photo {
@@ -328,15 +361,35 @@ body {
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
     outline-offset: 2rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: calc(100% / 3);
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 0;
+          transform: scale(1.3); } }
     .composition__photo--p2 {
       right: 0;
       top: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 1rem;
+          left: 0;
+          transform: scale(1.3); } }
     .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
       -webkit-transform: scale(1.05) translateY(-0.5rem);
@@ -465,17 +518,22 @@ body {
   transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
   transition: transform 0.3s, -webkit-transform 0.3s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      width: 80%;
+      margin: 0 auto; } }
   .feature-box__icon {
     padding: 3rem 2rem 0;
     font-size: 6rem;
     margin-bottom: 0.5rem;
     color: transparent;
-    background: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
     background: linear-gradient(to right, #7ed56f, #28b485);
     -webkit-background-clip: text;
     background-clip: text; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin-bottom: 0; } }
   .feature-box:hover {
-    -webkit-transform: translateY(-1.5rem) scale(1.03);
     transform: translateY(-1.5rem) scale(1.03); }
 
 .story {
@@ -600,9 +658,18 @@ body {
 .row {
   max-width: 114rem;
   /* 1140px */
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding-left: 2rem;
+  padding-left: 2rem; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 5rem; } }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
   .row::after {
     content: "";
     display: table;
@@ -611,6 +678,13 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 5rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
@@ -641,7 +715,18 @@ body {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  cursor: pointer; }
+  cursor: pointer;
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .navigation__button {
+      top: 4rem;
+      right: 4rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__button {
+      top: 3rem;
+      right: 3rem;
+      height: 6rem;
+      width: 6rem; } }
 
 .navigation__background {
   background-image: radial-gradient(#7ed56f, #28b485 75%);
@@ -653,7 +738,16 @@ body {
   right: 6.5rem;
   /* background should be coming from the right */
   z-index: 1000;
-  transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1); }
+  transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1);
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .navigation__background {
+      top: 4.5rem;
+      right: 4.5rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__background {
+      top: 3rem;
+      right: 3rem; } }
 
 .navigation__nav {
   height: 100vh;
@@ -719,7 +813,7 @@ body {
     content: "";
     position: absolute;
     left: 0;
-    transition: all .2s; }
+    transition: all 0.2s; }
   .navigation__icon::before {
     top: -0.8rem; }
   .navigation__icon::after {
@@ -752,7 +846,16 @@ body {
   background-attachment: fixed;
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%); } }
+  @media (max-width: 37.5em) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -772,9 +875,15 @@ body {
   padding: 10rem 0;
   font-size: 1.2rem;
   color: #f7f7f7; }
+  @media (max-width: 56.25em) {
+    .footer {
+      padding: 8rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 6rem; } }
   .footer__logo {
     width: 15rem;
     height: auto; }
@@ -783,6 +892,10 @@ body {
     padding-top: 2rem;
     display: inline-block;
     /* so that it occupies only the width that the content needs*/ }
+    @media (max-width: 56.25em) {
+      .footer__navigation {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -806,11 +919,25 @@ body {
     width: 75%;
     float: right;
     text-align: center; }
+    @media (max-width: 56.25em) {
+      .footer__copyright {
+        width: 100%;
+        text-align: center;
+        float: none; } }
 
 .section-about {
   background: #f7f7f7;
-  padding: 25rem 0;
-  margin-top: -20vh; }
+  padding: 25rem 0 25rem;
+  margin-top: -20vh;
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .section-about {
+      margin-top: -15vh;
+      padding: 20rem 0 28rem; } }
+  @media (max-width: 37.5em) {
+    .section-about {
+      margin-top: -10vh;
+      padding: 12rem 0 25rem; } }
 
 .section-features {
   padding: 20rem 0;
@@ -818,22 +945,50 @@ body {
   background-size: cover;
   transform: skewY(-8deg);
   margin-top: -16rem;
-  /* select direct child - row */ }
+  /* select direct child - row */
+  /* 600px / 16px = 37.5em */ }
   .section-features > * {
     transform: skewY(8deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0; } }
+  @media (max-width: 37.5em) {
+    .section-features {
+      padding: 8rem 0; } }
 
 .section-tours {
   background: #f7f7f7;
-  padding: 30rem 0 15rem;
-  margin-top: -16rem; }
+  padding: 25rem 0 15rem;
+  margin-top: -16rem;
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 25rem 0 10rem; } }
+  @media (max-width: 37.5em) {
+    .section-tours {
+      padding: 22rem 0 8rem; } }
 
 .section-stories {
   padding: 15rem 0;
-  position: relative; }
+  position: relative;
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
+  @media (max-width: 37.5em) {
+    .section-stories {
+      padding: 5rem 0; } }
 
 .section-book {
   padding: 15rem 0;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+  /* 600px / 16px = 37.5em */ }
+  @media (max-width: 56.25em) {
+    .section-book {
+      padding: 10rem 0; } }
+  @media (max-width: 37.5em) {
+    .section-book {
+      padding: 5rem 0; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
