--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -28,6 +28,8 @@ $breakpoint arguement choices:
 - tab-land
 - big-desktop
 
+ORDER: Base + typography > general layout + grid > page layout > components
+
 1em = 16px (aka browser default, we cant choose the size)
 doesn't work with rems
 */
