--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
 	font-weight: 400;
 	line-height: 1.7;
 	color: $color-grey-dark-1;
-	padding: 3rem;
 }
 
 .heading-primary {
@@ -12,20 +11,22 @@ body {
 	/*? fix for potential shaky animation at the end*/
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
-	margin-bottom: 7rem;
+	margin-bottom: 6.5rem;
 
 	&--main {
 		display: block;
-		// font-size: 6rem;
-		font-size: 8rem;
+		font-size: 7rem;
 		font-weight: 400;
 		letter-spacing: 3.5rem;
-		-webkit-animation: moveInLeft;
 		animation: moveInLeft;
-		-webkit-animation-duration: 1s;
 		animation-duration: 1s;
-		-webkit-animation-timing-function: ease-in-out;
 		animation-timing-function: ease-in-out;
+
+		@include respond(phone) {
+			font-size: 6rem;
+			letter-spacing: 1rem;
+		}
+
 		/* 	animation-timing-function: cubic-bezier(0.15, 1.32, 0.3,-0.14); */
 		/* 
 		animation-iteration-count: 3; 
@@ -36,40 +37,52 @@ body {
 
 	&--sub {
 		display: block;
-		font-size: 3rem;
+		font-size: 2.5rem;
 		font-weight: 700;
 		letter-spacing: 1.75rem;
 		-webkit-animation: moveInRight 1s ease-out;
 		animation: moveInRight 1s ease-out;
+
+		@include respond(phone) {
+			font-size: 2.3rem;
+			letter-spacing: 0.5rem;
+		}
 	}
 }
 
 .heading-secondary {
+	display: inline-block;
 	font-size: 3.5rem;
 	text-transform: uppercase;
 	font-weight: 700;
-	background-image: -webkit-gradient(
-		linear,
-		left top,
-		right top,
-		from($color-primary-light),
-		to($color-primary-dark)
-	);
+	letter-spacing: 0.2rem;
+	padding-left: 3.5rem;
+	padding-right: 3.5rem;
+
 	background-image: linear-gradient(
 		to right,
 		$color-primary-light,
 		$color-primary-dark
 	);
-	display: inline-block;
+	border-image: linear;
 	background-clip: text;
 	-webkit-background-clip: text;
 	color: transparent;
-	letter-spacing: 0.2rem;
-	-webkit-transition: all 0.2s;
 	transition: all 0.2s;
 
+	@include respond(tab-port) {
+		font-size: 3.2rem;
+	}
+
+	@include respond(tab-port) {
+		font-size: 3rem;
+	}
+
+	@include respond(phone) {
+		font-size: 2.8rem;
+	}
+
 	&:hover {
-		-webkit-transform: skew(15deg, 2deg) scale(1.1);
 		transform: skew(15deg, 2deg) scale(1.1);
 		text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
 	}
