--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -10,18 +10,16 @@
 	transition: transform 0.3s;
 	transition: transform 0.3s, -webkit-transform 0.3s;
 
+	@include respond(tab-port) {
+		width: 80%;
+		margin: 0 auto;
+	}
+
 	&__icon {
 		padding: 3rem 2rem 0;
 		font-size: 6rem;
 		margin-bottom: 0.5rem;
 		color: transparent;
-		background: -webkit-gradient(
-			linear,
-			left top,
-			right top,
-			from($color-primary-light),
-			to($color-primary-dark)
-		);
 		background: linear-gradient(
 			to right,
 			$color-primary-light,
@@ -29,10 +27,13 @@
 		);
 		-webkit-background-clip: text;
 		background-clip: text;
+
+		@include respond(tab-port) {
+			margin-bottom: 0;
+		}
 	}
 
 	&:hover {
-		-webkit-transform: translateY(-1.5rem) scale(1.03);
 		transform: translateY(-1.5rem) scale(1.03);
 	}
 }
