--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
 	font-size: 1.2rem;
 	color: $color-grey-light-1;
 
+	@include respond(tab-port) {
+		padding: 8rem 0;
+	}
+
 	&__logo-box {
 		text-align: center;
 		margin-bottom: 8rem;
+
+		@include respond(tab-port) {
+			margin-bottom: 6rem;
+		}
 	}
 
 	&__logo {
@@ -18,6 +26,11 @@
 		border-top: 1px solid $color-grey-dark-1;
 		padding-top: 2rem;
 		display: inline-block; /* so that it occupies only the width that the content needs*/
+
+		@include respond(tab-port) {
+			width: 100%;
+			text-align: center;
+		}
 	}
 
 	&__list {
@@ -35,7 +48,7 @@
 	&__link {
 		&:link,
 		&:visited {
-            color: inherit;
+			color: inherit;
 			background-color: $color-grey-dark-3;
 			text-decoration: none;
 			text-transform: uppercase;
@@ -52,10 +65,16 @@
 	}
 
 	&__copyright {
-        border-top: 1px solid $color-grey-dark-1;
-        padding-top: 2rem;
-        width: 75%;
-        float: right;
-        text-align: center;
+		border-top: 1px solid $color-grey-dark-1;
+		padding-top: 2rem;
+		width: 75%;
+		float: right;
+		text-align: center;
+
+		@include respond(tab-port) {
+			width: 100%;
+			text-align: center;
+			float: none;
+		}
 	}
 }
