--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -20,6 +20,17 @@
 		justify-content: center;
 		align-content: center;
 		cursor: pointer;
+
+		@include respond(tab-port) {
+			top: 4rem;
+			right: 4rem;
+		}
+		@include respond(phone) {
+			top: 3rem;
+			right: 3rem;
+			height: 6rem;
+			width: 6rem;
+		}
 	}
 
 	&__background {
@@ -35,6 +46,15 @@
 		right: 6.5rem; /* background should be coming from the right */
 		z-index: 1000;
 		transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1);
+
+		@include respond(tab-port) {
+			top: 4.5rem;
+			right: 4.5rem;
+		}
+		@include respond(phone) {
+			top: 3rem;
+			right: 3rem;
+		}
 	}
 
 	&__nav {
@@ -121,7 +141,7 @@
 			content: "";
 			position: absolute;
 			left: 0;
-			transition: all .2s;
+			transition: all 0.2s;
 		}
 
 		&::before {
