--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,17 @@
 .section-about {
 	background: $color-grey-light-1;
-	padding: 25rem 0;
+	padding: 25rem 0 25rem;
 	margin-top: -20vh;
+
+	@include respond(tab-port) {
+		margin-top: -15vh;
+		padding: 20rem 0 28rem;
+	}
+
+	@include respond(phone) {
+		margin-top: -10vh;
+		padding: 12rem 0 25rem;
+	}
 }
 
 .section-features {
@@ -20,16 +30,37 @@
 	& > * {
 		transform: skewY(8deg);
 	}
+
+	@include respond(tab-port) {
+		padding: 10rem 0;
+	}
+	@include respond(phone) {
+		padding: 8rem 0;
+	}
 }
 .section-tours {
 	background: $color-grey-light-1;
-	padding: 30rem 0 15rem;
+	padding: 25rem 0 15rem;
 	margin-top: -16rem;
+
+	@include respond(tab-port) {
+		padding: 25rem 0 10rem;
+	}
+	@include respond(phone) {
+		padding: 22rem 0 8rem;
+	}
 }
 
 .section-stories {
 	padding: 15rem 0;
 	position: relative;
+
+	@include respond(tab-port) {
+		padding: 10rem 0;
+	}
+	@include respond(phone) {
+		padding: 5rem 0;
+	}
 }
 
 .section-book {
@@ -39,6 +70,13 @@
 		$color-primary-light,
 		$color-primary-dark
 	);
+
+	@include respond(tab-port) {
+		padding: 10rem 0;
+	}
+	@include respond(phone) {
+		padding: 5rem 0;
+	}
 }
 
 .book {
@@ -46,7 +84,7 @@
 			105deg,
 			rgba($color-white, 0.9) 0%,
 			rgba($color-white, 0.9) 50%,
-			transparent 50%	
+			transparent 50%
 		),
 		url(../img/nat-10.jpg);
 	background-size: 100%; /* same thing as cover */
@@ -54,7 +92,6 @@
 	box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
 	height: 50rem;
-
 
 	&__form {
 		width: 50%;
